web/app/themes/map/assets/less/app.less
/* ... */
#map {
	position: relative;
	background-size: 100% auto !important;
	min-width: 100vw;
	min-height: 100vh;
	margin-bottom: 50px;
	&.z1 {
		height: 1080px;
		width: 1185px;
		background: url(../img/map-sm.png) no-repeat;
		.zoomout {
			background: darken(@white, 10%);
		}
	}
	&.z2 {
		height: 1620px;
		width: 1777px;
		background: url(../img/map-sm.png) no-repeat;
	}
	&.z3 {
		height: 2160px;
		width: 2370px;
		background: url(../img/map-sm.png) no-repeat;
		.zoomout {
			background: darken(@white, 10%);
		}
	}
}
#map_controls {
	position: fixed;
	top: 80px;
	right: 40px;
	z-index: 99;
	border: 1px solid darken(@white, 10%);
	border-radius: 3px;
	a, a:active, a:visited {
		width: 30px;
		height: 30px;
		font-size: 1.8em;
		line-height: 25px;
		font-weight: bold;
		text-align: center;
		display: block;
		background: @white;
		color: @gray-light;
		transition: all, .2s;
		&:first-child {
			border-bottom: 1px solid darken(@white, 10%);
		}
		&:hover, &:active, &:focus {
			text-decoration: none;
		}
	}
}
.location {
	list-style-type: none;
	position: absolute;
	display: inline-block;
	&:hover .quicklook, &.active .quicklook {
		visibility: visible;
		opacity: 1;
		transition-delay: 0.001s; /* 0.001s to ensure Grunt doesn't remove the "s" */
	}
	&.active .quicklook {
		z-index: 30
	}
}
.quicklook {
	visibility: hidden;
	opacity: 0;
	z-index: 31;
	position: absolute;
	width: 380px;
	bottom: 32px;
	left: -49px;
	background: @black;
	color: @white;
	padding: 10px;
	transition: 0.001s all 0.15s; /* 0.001s to ensure Grunt doesn't remove the "s" */
	&:after {
		top: 100%;
		left: 15%;
		border: solid transparent;
		content: " ";
		height: 0;
		width: 0;
		position: absolute;
		/*pointer-events: none;*/
		border-color: rgba(0, 0, 0, 0);
		border-top-color: @black;
		border-width: 15px;
		margin-left: -15px;
	}
	p {
		.opensans;
		color: @white;
		font-size: 12px;
	}
	h2 {
		font-size: 16px;
		padding-bottom:5px;
		a, a:hover, a:active, a:visited {
			color: @white;
		}
	}
	.col-xs-7 {
		padding-left: 10px;
		padding-right: 0;
	}
 .col-xs-5 {
		padding-left: 0;
		padding-right: 0;
	}
	.thumb {
		width: 100%;
	}
	.button {
		background: @white;
		color: @black;
		text-shadow: none;
		padding: 2px 16px;
		display: table;
		font-weight: 500;
		font-size: 14px;
	}
}
.academic, .academics {
	.pin{background:@purple;}
	h2 {border-bottom: 2px solid @purple;}
}
.athletic, .athletics {
	.pin {background:@mudkip;}
	h2 {border-bottom: 2px solid @mudkip;}
}
.administrative {
	.pin {background:@yellow;}
	h2 {border-bottom: 2px solid @yellow;}
}
.dining {
	.pin {background:@orange;}
	h2 {border-bottom: 2px solid @orange;}

}
.residential {
	.pin {background:@blue;}
	h2 {border-bottom: 2px solid @blue;}
}
.student-life {
	.pin {background:@green-bright;}
	h2 {border-bottom: 2px solid @green-bright;}
}

.pin {
	width: 16px;
  height: 16px;
  background: #000;
  border-radius: 16px;
  border: 2px solid #fff;
	display: block;
}
/* ... */

